# xishi-bot

./: .coverage  .gitignore  README.md  V1.md  V2.docx  V2.md  pyproject.toml  requirements.txt
.claude/: settings.json
cc-connect/: config.toml.example
qq-proxy/: proxy.py
tests/: test_context_builder.py  test_filter.py
v2-engine/: config.py  filter.py  generate_pdf.py  main.py  router.py  send_notify.py  smoke_test.py
v2-engine/context/: builder.py
v2-engine/db/: database.py  queries.py
v2-engine/emotion/: engine.py
v2-engine/memory/: manager.py  summarizer.py
v2-engine/scheduler/: scheduler.py
v2-engine/stickers/: library.py  matcher.py
v2-engine/web/: app.py
xishi-bot/: CLAUDE.md
